--- a/app/src/main/res/layout-v21/fragment_contact.xml
+++ b/app/src/main/res/layout-v21/fragment_contact.xml
@@ -15,7 +15,7 @@
         android:orientation="vertical"
         android:gravity="center"
         android:clickable="true"
-        android:background="@drawable/contact_bg1"
+        android:background="@drawable/contact_bg1_selector"
         android:id="@+id/hospitalContainer">
         <TextView
                 android:layout_width="wrap_content"
@@ -42,7 +42,7 @@
         android:orientation="vertical"
         android:gravity="center"
         android:clickable="true"
-        android:background="@drawable/contact_bg2">
+        android:background="@drawable/contact_bg2_selector">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -68,7 +68,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="@drawable/contact_bg3">
+        android:background="@drawable/contact_bg3_selector">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
