--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="textPrimary">#ffffff</color>
     <color name="navigationBar">#ffcd19</color>
     <color name="windowBackground">#fff647</color>
+    <color name="appColor">#fff647</color>
 
 </resources>
