--- a/app/src/main/res/layout/walkthrough.xml
+++ b/app/src/main/res/layout/walkthrough.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:padding="10dp"
-        android:text="@string/skip"
+        android:text=""
         android:textColor="@android:color/white" >
     </TextView>
 
@@ -26,7 +26,7 @@
             android:layout_width="250dp"
             android:layout_height="250dp"
             android:layout_gravity="center_horizontal"
-            android:background="@drawable/walkthrough_oval" >
+         >
 
             <ImageView
                 android:id="@+id/icon"
@@ -65,8 +65,8 @@
         android:layout_margin="20dp"
         android:background="@android:color/white"
         android:padding="10dp"
-        android:text="@string/start"
-        android:textColor="@color/mainColor"
+        android:text=""
+        android:textColor="@color/appColor"
         android:textSize="14sp" />
 
 </RelativeLayout>
