--- a/app/src/main/res/layout-v21/contact_row.xml
+++ b/app/src/main/res/layout-v21/contact_row.xml
@@ -3,108 +3,88 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:descendantFocusability="beforeDescendants"
-    android:padding="5dp" >
+    android:padding="5dp">
 
-
-    <LinearLayout
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <android.support.v7.widget.CardView
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/card_view"
-            android:layout_gravity="center"
-            android:layout_width="match_parent"
-            android:padding="10dp"
-            android:layout_height="200dp"
-            card_view:cardCornerRadius="4dp">
-
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        android:padding="10dp"
+        card_view:cardBackgroundColor="@android:color/white"
+        card_view:cardCornerRadius="4dp">
 
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+
+            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/imageViewContainer"
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:foreground="@drawable/contact_bg1"
+                card_view:cardCornerRadius="4dp"></android.support.v7.widget.CardView>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:orientation="vertical" >
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="10dp">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                                            android:padding="10dp"
-                    
-                    android:orientation="horizontal" >
-
-                    <TextView
-                        android:id="@+id/name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="name"
-                        android:textColor="@android:color/black"
-                        android:textSize="16sp"
-                        android:visibility="visible" />
-
-                    <TextView
-                        android:id="@+id/type"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
-                        android:text="type"
-                        android:textSize="12sp"
-                        android:visibility="visible" />
-                </RelativeLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal" >
-
-                    <TextView
-                        android:id="@+id/address"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="10dp"
-                        android:visibility="gone" />
-                </LinearLayout>
+                    android:text="name"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:orientation="horizontal" >
+                    android:layout_height="wrap_content">
 
-                    <TextView
-                        android:id="@+id/phone3"
+                    <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:clickable="true"
-                        android:padding="10dp"
-                        android:textSize="14sp"
-                        android:textStyle="bold"
-                        android:visibility="visible" />
+                        android:background="@drawable/ic_launcher" />
 
                     <TextView
-                        android:id="@+id/phone2"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/shortAddress"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:clickable="true"
-                        android:padding="10dp"
-                        android:textSize="14sp"
-                        android:textStyle="bold"
-                        android:visibility="visible" />
-
-                    <TextView
-                        android:id="@+id/phone1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:clickable="true"
-                        android:padding="10dp"
-                        android:textSize="14sp"
-                        android:textStyle="bold"
-                        android:visibility="visible" />
+                        android:text="address"
+                        android:textColor="@android:color/black" />
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_launcher" />
+
+                    <TextView
+                        android:id="@+id/weekDays"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="address"
+                        android:textColor="@android:color/black" />
+                    <TextView
+                        android:id="@+id/weekDaysTime"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="address"
+                        android:textColor="@android:color/black" />
+
+                </LinearLayout>
+
             </LinearLayout>
-        </android.support.v7.widget.CardView>
-    </LinearLayout>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 
 
 </LinearLayout>
