Contacts UI little bit changed.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="navigationBar">#ffcd19</color>
     <color name="windowBackground">#fff647</color>
     <color name="appColor">#fff647</color>
+    <color name="contactBackground">#bab4b4</color>
 
 </resources>
