--- a/app/src/main/res/layout-v21/fragment_contact.xml
+++ b/app/src/main/res/layout-v21/fragment_contact.xml
@@ -29,8 +29,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/doctorCatListing"
-            android:padding="10dp"
+            android:padding="5dp"
             android:textSize="18dp"
             android:textColor="@android:color/white"
             android:id="@+id/hospitalCatListing" />
@@ -42,6 +41,7 @@
         android:orientation="vertical"
         android:gravity="center"
         android:clickable="true"
+        android:id="@+id/doctorContainer"
         android:background="@drawable/contact_bg2_selector">
         <TextView
             android:layout_width="wrap_content"
@@ -55,8 +55,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/doctorCatListing"
-            android:padding="10dp"
+            android:padding="5dp"
             android:textSize="18dp"
             android:textColor="@android:color/white"
             android:id="@+id/doctorCatListing" />
@@ -68,6 +67,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:id="@+id/masseurContainer"
         android:background="@drawable/contact_bg3_selector">
         <TextView
             android:layout_width="wrap_content"
@@ -81,8 +81,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/masseurCatListing"
-            android:padding="10dp"
+            android:padding="5dp"
             android:textSize="18dp"
             android:textColor="@android:color/white"
             android:id="@+id/masseurCatListing" />
