--- a/app/src/main/res/layout-v21/contact_row.xml
+++ b/app/src/main/res/layout-v21/contact_row.xml
@@ -8,7 +8,7 @@
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="140dp"
+        android:layout_height="80dp"
         card_view:cardBackgroundColor="@android:color/white"
         card_view:cardCornerRadius="4dp">
 
@@ -20,7 +20,7 @@
 
             <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/imageViewContainer"
-                android:layout_width="140dp"
+                android:layout_width="80dp"
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:foreground="@drawable/contact_bg1"
@@ -61,66 +61,6 @@
                 </LinearLayout>
                 <LinearLayout
                     android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <ImageView
-                        android:layout_width="10dp"
-                        android:layout_height="10dp"
-                        android:background="@drawable/ic_launcher" />
-
-                    <LinearLayout
-                        android:orientation="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:background="#ffeeae"
-                        android:weightSum="2"
-                        >
-                    <TextView
-                        android:id="@+id/weekday"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="davaa-baasan"
-                        android:layout_weight="1"
-                        android:textColor="@android:color/black" />
-                    <TextView
-                        android:id="@+id/weekdaytime"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="08:00-18:00"
-                        android:layout_weight="1"
-                        android:textColor="@android:color/black" />
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:background="#ffeeae"
-                        android:weightSum="2"
-                        >
-                        <TextView
-                            android:id="@+id/weekend"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="bymba-nyam"
-                            android:layout_weight="1"
-                            android:textColor="@android:color/black" />
-                        <TextView
-                            android:id="@+id/weekendtime"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="08:00-18:00"
-                            android:layout_weight="1"
-                            android:textColor="@android:color/black" />
-                    </LinearLayout>
-                    </LinearLayout>
-                </LinearLayout>
-                <LinearLayout
-                    android:orientation="horizontal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
@@ -131,22 +71,10 @@
                         android:background="@drawable/ic_launcher" />
 
                     <TextView
-                        android:id="@+id/phone1"
+                        android:id="@+id/isWorking"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="district"
-                        android:textColor="@android:color/black" />
-                    <TextView
-                        android:id="@+id/phone2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="district"
-                        android:textColor="@android:color/black" />
-                    <TextView
-                        android:id="@+id/phone3"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="district"
+                        android:text="Яг одоо ажиллаж байна"
                         android:textColor="@android:color/black" />
                 </LinearLayout>
             </LinearLayout>
