--- a/app/src/main/res/layout/contact_row.xml
+++ b/app/src/main/res/layout/contact_row.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rowContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:descendantFocusability="beforeDescendants"
@@ -18,19 +19,28 @@
             android:layout_margin="5dp"
             android:orientation="horizontal">
 
-            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/imageViewContainer"
+
+            <RelativeLayout
+                android:id="@+id/imageLayout"
                 android:layout_width="80dp"
-                android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                android:foreground="@drawable/contact_bg1"
-                card_view:cardCornerRadius="4dp"></android.support.v7.widget.CardView>
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/imageStatus"
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_margin="2dp"
+                    android:background="@drawable/contact_online" />
+
+            </RelativeLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
                 android:gravity="center_vertical"
+                android:orientation="vertical"
                 android:padding="10dp">
 
                 <TextView
@@ -42,11 +52,11 @@
                     android:textSize="16sp" />
 
                 <LinearLayout
-                    android:orientation="horizontal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
-                    >
+                    android:orientation="horizontal">
+
                     <ImageView
                         android:layout_width="10dp"
                         android:layout_height="10dp"
@@ -59,12 +69,13 @@
                         android:text="district"
                         android:textColor="@android:color/black" />
                 </LinearLayout>
+
                 <LinearLayout
-                    android:orientation="horizontal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
-                    >
+                    android:orientation="horizontal">
+
                     <ImageView
                         android:layout_width="10dp"
                         android:layout_height="10dp"
