--- a/app/src/main/res/layout/loadingdatasplashscreen.xml
+++ b/app/src/main/res/layout/loadingdatasplashscreen.xml
@@ -12,4 +12,10 @@
         android:textColor="#212121"
         android:textSize="40sp"/>
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/image"
+        />
+
 </LinearLayout>
